--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@
   --color-black-5: rgba(0, 0, 0, 0.05);
   --color-black-10: rgba(0, 0, 0, 0.1);
   --color-black-50: rgba(0, 0, 0, 0.5);
+  --not-found-image: url("./assets/not_found_image.svg");
 }
 
 body {
