--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  input,
+  button,
+  select,
+  textarea {
+    @apply outline-none;
+  }
+}
+
 :root {
+  /* 색상 변수 */
   --text-color-dark: #1c1c1c;
   --text-color-gray: #4b4b4b;
   --text-color-gray-light: #616161;
@@ -12,13 +22,59 @@
   --color-blue-hover: #0040d4;
   --color-blue-light: #ebf3ff;
   --color-green: #00875a;
+  --color-green-10: rgba(0, 135, 90, 0.1);
+  --color-green-70: rgba(0, 135, 90, 0.7);
   --color-red: #de350b;
+  --color-red-10: rgb(222, 53, 11, 0.1);
+  --color-red-70: rgb(222, 53, 11, 0.7);
   --color-orange: #ff8b00;
+  --color-orange-10: rgba(255, 140, 0, 0.1);
+  --color-orange-70: rgba(255, 140, 0, 0.7);
   --color-white: #e0e0e0;
   --color-black-5: rgba(0, 0, 0, 0.05);
   --color-black-10: rgba(0, 0, 0, 0.1);
   --color-black-50: rgba(0, 0, 0, 0.5);
+
+  /* 이미지 Path  변수 */
   --not-found-image: url("./assets/not_found_image.svg");
+
+  /* Box Shadow 변수 */
+  --box-shadow-t-sm: 0 -1px 2px 0 rgba(0, 0, 0, 0.05);
+  --box-shadow-t-md: 0 -4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  --box-shadow-t-lg: 0 -10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  --box-shadow-t-xl: 0 -20px 25px -5px rgba(0, 0, 0, 0.1),
+    0 10px 10px -5px rgba(0, 0, 0, 0.04);
+  --box-shadow-t-2xl: 0 -25px 50px -12px rgba(0, 0, 0, 0.25);
+  --box-shadow-t-3xl: 0 -35px 60px -15px rgba(0, 0, 0, 0.3);
+  --box-shadow-b-sm: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+  --box-shadow-b-md: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 -2px 4px -1px rgba(0, 0, 0, 0.06);
+  --box-shadow-b-lg: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 -4px 6px -2px rgba(0, 0, 0, 0.05);
+  --box-shadow-b-xl: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
+    0 -10px 10px -5px rgba(0, 0, 0, 0.04);
+  --box-shadow-b-2xl: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
+  --box-shadow-b-3xl: 0 35px 60px -15px rgba(0, 0, 0, 0.3);
+  --box-shadow-l-sm: -1px 0 2px 0 rgba(0, 0, 0, 0.05);
+  --box-shadow-l-md: -4px 0 6px -1px rgba(0, 0, 0, 0.1),
+    2px 0 4px -1px rgba(0, 0, 0, 0.06);
+  --box-shadow-l-lg: -10px 0 15px -3px rgba(0, 0, 0, 0.1),
+    4px 0 6px -2px rgba(0, 0, 0, 0.05);
+  --box-shadow-l-xl: -20px 0 25px -5px rgba(0, 0, 0, 0.1),
+    10px 0 10px -5px rgba(0, 0, 0, 0.04);
+  --box-shadow-l-2xl: -25px 0 50px -12px rgba(0, 0, 0, 0.25);
+  --box-shadow-l-3xl: -35px 0 60px -15px rgba(0, 0, 0, 0.3);
+  --box-shadow-r-sm: 1px 0 2px 0 rgba(0, 0, 0, 0.05);
+  --box-shadow-r-md: 4px 0 6px -1px rgba(0, 0, 0, 0.1),
+    -2px 0 4px -1px rgba(0, 0, 0, 0.06);
+  --box-shadow-r-lg: 10px 0 15px -3px rgba(0, 0, 0, 0.1),
+    -4px 0 6px -2px rgba(0, 0, 0, 0.05);
+  --box-shadow-r-xl: 20px 0 25px -5px rgba(0, 0, 0, 0.1),
+    -10px 0 10px -5px rgba(0, 0, 0, 0.04);
+  --box-shadow-r-2xl: 25px 0 50px -12px rgba(0, 0, 0, 0.25);
+  --box-shadow-r-3xl: 35px 0 60px -15px rgba(0, 0, 0, 0.3);
 }
 
 body {
